# ExerciciosHeranca

./: .gitignore  CMakeLists.txt  README.md  instrucoes.txt  main.cpp
funcionario/: funcionario.cpp  funcionario.hpp
graph/: graph.cpp  graph.hpp
principal/: main.cpp
veiculo/: Caminhao.cpp  Caminhao.hpp  Van.cpp  Van.hpp  Veiculo.cpp  Veiculo.hpp
